# nerdos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile  linker.ld  phase.md  rust-toolchain.toml
boot/: boot.S  grub.cfg  trampoline32.S
boot/grub/: grub.cfg
boundaryos/: Cargo.toml  linker.ld
boundaryos/boot/: boot.S  grub.cfg  trampoline32.S
boundaryos/kernel/src/: main.rs
boundaryos/kernel/src/arch/: mod.rs
boundaryos/kernel/src/arch/x86_64/: apic.rs  gdt.rs  idt.rs  interrupts.rs  iommu.rs  paging.rs  pit.rs  syscall.rs  tsc.rs
boundaryos/kernel/src/drivers/: mod.rs  pci.rs  serial.rs  vga.rs
boundaryos/kernel/src/drivers/exo/: exo_keyboard.rs  exo_serial.rs  exo_vga.rs  mod.rs
boundaryos/kernel/src/memory/: capability_table.rs  fossil_pages.rs  heap.rs  mod.rs  physical.rs  virtual.rs
boundaryos/kernel/src/security/: audit.rs  covenant.rs  invariant_judge.rs  membrane_gate.rs  mod.rs  naked_mode.rs  unforgeable.rs
etc/: fstab  hostname  hosts
etc/nerdpkg/: nerdpkg.toml  sources.list
kernel/src/: main.rs  panic.rs
src/bootloader/: Cargo.toml  linker.ld
src/bootloader/src/: boot.asm
src/drivers/: Cargo.toml
src/drivers/src/: ahci.rs  e1000.rs  lib.rs  pci.rs
src/kernel_core/: Cargo.toml  x86_64-nerdos.json
src/kernel_core/src/: clock.rs  gdt.rs  idt.rs  interrupts.rs  lib.rs  memory.rs  scheduler.rs  serial.rs  syscall.rs  tty.rs  vga.rs
src/nerdshell/: Cargo.toml
src/nerdshell/src/: lib.rs
src/net/: Cargo.toml
src/net/src/: arp.rs  dhcp.rs  ethernet.rs  icmp.rs  ipv4.rs  lib.rs  socket.rs  tcp.rs  udp.rs
src/pkg/: Cargo.toml
src/pkg/src/: lib.rs
src/vfs/: Cargo.toml
src/vfs/src/: ext4.rs  fat32.rs  lib.rs  procfs.rs
