[package]
name = "boundaryos"
version = "0.1.0"
edition = "2021"

[dependencies]
# No external runtime dependencies in the kernel
# All functionality is built from scratch or using:
spin = "0.9"          # spinlocks for early boot
bitflags = "2.0"      # RightsSet, etc.
linked_list_allocator = "0.10"  # kernel heap

[profile.release]
panic = "abort"
lto = true
opt-level = "s"       # size over speed initially
codegen-units = 1

[profile.dev]
panic = "abort"
