[package]
name = "net"
version = "0.1.0"
edition = "2024"
authors = ["NerdOS Contributors"]
description = "Network stack for NerdOS - TCP/IP, UDP, ARP, DHCP"
license = "MIT"

[dependencies]
kernel_core = { path = "../kernel_core" }
drivers = { path = "../drivers" }

[lib]
crate-type = ["staticlib"]
