[package]
name = "vfs"
version = "0.1.0"
edition = "2024"
authors = ["NerdOS Contributors"]
description = "Virtual File System layer for NerdOS with ext4 and FAT32 support"
license = "MIT"

[dependencies]
kernel_core = { path = "../kernel_core" }
bitflags = "2.4"
spin = "0.9"

[lib]
crate-type = ["staticlib"]
